# duckdb_benchmark

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
duckdb_benchmark/: __init__.py  benchmark.py  cli.py  config.py  data_generator.py  load_tpch_extension.py
tests/: test_benchmark.py  test_cli.py  test_config.py  test_data_generator.py  test_load_tpch_extension.py  test_module.py
